<resources>
    <string name="app_name">Agora Vote Prototype</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="agora_vote_is">Agora vote is a voting \n platform where users can create elections and invite friends to cast their votes.</string>
    <string name="t_supports_a">It supports a wide range of voting algorithms some of which are Majority, Egalitarian, Australian STV just to name a few</string>
    <string name="contact_us">Feel free to contact us on out gitter channels and work with us on gitlab</string>
    <string name="technical_project_voting">\n Elections for college students \n to decide the best project out of \n the selected ones.</string>
    <string name="one">1</string>
    <string name="candidates">1. Mukul Kumar  \n2. Abandon  \n3. Thuvarakan  \n4. Alex Stark</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="create_election">Create Election</string>
    <string name="pending_elections">Pending Elections</string>
    <string name="active_election">Active Election</string>
    <string name="finished_elections">Finished Elections</string>
    <string name="technical_project_voting1">Technical Project Voting</string>
    <string name="candidates1">Candidates</string>
    <string name="start_date">Start Date: March 19, 2019</string>
    <string name="end_date">End Date: March 19, 2021</string>
    <string name="create_new_election">Create New Election</string>
    <string name="n_you_can_move_candidates_n_by_sliding_them">\nYou can move candidates   By sliding them</string>
    <string name="your_ballot">Your Ballot</string>
    <string name="_1_steven_roth_n_n2_donald_trump_n_n3_abanda_ludovic">1. Steven Roth \n\n2. Donald Trump   \n\n3. Abanda Ludovic</string>
    <string name="vote_now">Vote Now</string>
    <string name="signup">Signup</string>
    <string name="continue_with_facebook">Continue with facebook</string>
    <string name="sign_in">Sign in</string>
    <string name="election_name">Election Name</string>
    <string name="election_description">Election Description</string>
    <string name="next">Next</string>
    <string name="_1_6">1/6</string>
    <string name="previous">Previous</string>
    <string name="_2_6">2/6</string>
    <string name="start_date1">Start Date</string>
    <string name="_3_20_2019_11_58">3/20/2019, 11:58</string>
    <string name="end_date1">End Date</string>
    <string name="_3_20_2021_11_58">3/20/2021, 11:58</string>
    <string name="preview">Preview</string>
    <string name="_3_6">3/6</string>
    <string name="add_candidate">Add Candidate</string>
    <string name="name_of_candidate">Name of Candidate</string>
    <string name="enter_candidate_s_name">Enter Candidate\'s Name</string>
    <string name="add_more_candidates">Add More Candidates</string>
    <string name="_4_6">4/6</string>
    <string name="candidate_s_list">Candidate\'s List</string>
    <string name="mukul_kumar">Mukul Kumar</string>
    <string name="abanda">Abanda</string>
    <string name="thuvarakan">Thuvarakan</string>
    <string name="alex_stark">Alex Stark</string>
    <string name="_5_6">5/6</string>
    <string name="select_voting_algorithm">Select Voting Algorithm</string>
    <string name="rankedpairs">RankedPairs</string>
    <string name="uncovered_set">Uncovered Set</string>
    <string name="random_ballot">Random Ballot</string>
    <string name="kemeny_young">Kemeny Young</string>
    <string name="rangevoting">RangeVoting</string>
    <string name="minimaxcondorset">MinimaxCondorset</string>
    <string name="exhaustive_ballot">Exhaustive Ballot</string>
    <string name="oklahoma">Oklahoma</string>
    <string name="borda">Borda</string>
    <string name="copeland">Copeland</string>
    <string name="smithset">SmithSet</string>
    <string name="approval">Approval</string>
    <string name="baldwin">Baldwin</string>
    <string name="nanson">Nanson</string>
    <string name="finish">Finish</string>
    <string name="_6_6">6/6</string>
    <string name="get_real_time_results">Get real time results?</string>
    <string name="invite_voters">Invite Voters?</string>
    <string name="how_secret_are_ballots">How secret are ballots ?</string>
    <string name="ballots_are_completely_secret_and_never_shown_to_anyone">Ballots are completely secret and never shown to anyone</string>
    <string name="ballots_are_visible_only_to_me">Ballots are visible only to me</string>
    <string name="ballots_are_visible_to_everyone_with_access">Ballots are visible to everyone with access</string>
    <string name="who_can_see">Who can see the list of voters?</string>
    <string name="only_me">Only Me</string>
    <string name="everyone_with">Everyone with access to election</string>
    <string name="some_more_options">Some More Options</string>
    <string name="n_election_to_select_the_next_n_prime_minister">\nElection to select the next   Prime Minister</string>
    <string name="next_prime_minister">Next Prime Minister</string>
    <string name="finished">Finished</string>
    <string name="see_results">See Results</string>
    <string name="invite_voters1">Invite Voters</string>
    <string name="voters_name">Voters Name*</string>
    <string name="voters_email">Voters Email*</string>
    <string name="add_to_the_list">Add to the list</string>
    <string name="voter_1_email_1">Voter 1(email 1)</string>
    <string name="voter_2_email_2">Voter 2(email 2)</string>
    <string name="voter_3_email_3">Voter 3(email 3)</string>
    <string name="user_name">User Name*</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="email">Email*</string>
    <string name="password">Password*</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already Have An Account? Sign In</string>
    <string name="there_is_no_election_n_pending_currently">There is no election  pending currently</string>
    <string name="or">OR</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="made_with">Made With</string>
    <string name="by_aossie">By AOSSIE</string>
    <string name="agora_vote">Agora Vote</string>
    <string name="total_elections">Total Elections</string>
    <string name="active">Active</string>
    <string name="winner">(Winner!!!)</string>
    <string name="_1_steven_roth_n_n2_donald_trump_n_n_3_abanda_ludovic">1. Steven Roth   \n\n2. Donald Trump    \n\n3. Abanda Ludovic</string>
    <string name="see_your_ballot">See your Ballot</string>
    <string name="cast_your_vote">Cast Your Vote</string>
    <string name="_1_steven_roth">1. Steven Roth</string>
    <string name="_2_donald_trump">2. Donald Trump</string>
    <string name="_3_abanda_ludovic">3. Abanda Ludovic</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="options_starts_from_0_and_ends_at_8">Options starts from 0 and ends at 8</string>
    <string name="stuck_into_a_problem">Stuck into a problem?</string>
    <string name="open_up_dashboard_and_n_have_fun">Open up Dashboard \nand Have fun!!!</string>
    <string name="welcome_to_agora_vote_n_abanda_ludovic">Welcome To \nAgora Vote   \nAbanda Ludovic</string>
    <string name="about_agora">About Agora</string>
    <string name="contact_us1">Contact Us</string>
    <string name="aossie_gitlab">AOSSIE Gitlab</string>
    <string name="aossie_gitter">AOSSIE Gitter</string>
    <string name="my_invitations">My Invitations</string>
    <string name="name_abanda_ludovic">Name: Abanda Ludovic</string>
    <string name="username_icemc">Username: icemc</string>
    <string name="email_abandaludovic500_gmail_com">Email: abandaludovic500@gmail.com</string>
    <string name="old_password">Old Password*</string>
    <string name="new_password">New Password*</string>
    <string name="new_password_again">New Password Again*</string>
    <string name="abanda_ludovic">Abanda Ludovic</string>
    <string name="abandaludovic500_gmail_com">abandaludovic500@gmail.com</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="profile">Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="communicate">Communicate</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="share_with_others">Share with others</string>
</resources>
